<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/service"
        style="@style/MainButton"
        android:text="@string/service" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/foreground_service"
        style="@style/MainButton"
        android:text="@string/foreground_service" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/intent_service"
        style="@style/MainButton"
        android:text="@string/intent_service" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/job_dispatcher"
        style="@style/MainButton"
        android:text="@string/job_dispatcher" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/job_intent_service"
        style="@style/MainButton"
        android:text="@string/job_intent_service" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alarm_manager"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/work_manager"
        style="@style/MainButton"
        android:text="@string/work_manager" />
</LinearLayout>